# synth

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dma_circular_buffers.md
docs/: CLAUDE.md  DESIGN.md  DOCUMENTATION.md  MVP.md  PLAN.md  SHOPPING.md
scripts/: build.sh  env.sh  monitor.sh  run.sh
src/: audio_util.rs  config.rs  controls.rs  engine.rs  hardware.rs  lib.rs  message.rs  oscillator.rs  voice.rs
src/controls/: button.rs  mod.rs  pot.rs  task.rs
src/voice/: mod.rs
