[package]
edition      = "2021"
name         = "synth"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "synth"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32s3",
  "log-04",
  "unstable",
] }
log = "0.4.27"

critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "log",
  "task-arena-size-20480",
] }
embassy-sync = { version = "0.7.2" }
embassy-time = { version = "0.4.0", features = ["log"] }
esp-backtrace = { version = "0.17.0", features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32s3", "log-04"] }
esp-println = { version = "0.15.0", features = ["esp32s3", "log-04"] }
static_cell = "2.1.1"
heapless = "0.9.1"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
